[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/CharacterSprite/mystery box.png" type="Texture" id=1]
[ext_resource path="res://Weapons/RPD.tscn" type="PackedScene" id=2]
[ext_resource path="res://MysteryBox/MysteryBox.gd" type="Script" id=3]
[ext_resource path="res://Weapons/AK47.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/Custom_SMG.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Font/RussoOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Weapons/RayGun.tscn" type="PackedScene" id=7]
[ext_resource path="res://Weapons/M24.tscn" type="PackedScene" id=8]
[ext_resource path="res://Weapons/PumpAction.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 504, 300, 168 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 300, 168 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 168, 300, 168 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 300, 168 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 300, 168 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 168, 300, 168 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 336, 300, 168 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 504, 300, 168 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "close",
"speed": 7.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "open",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 51.3517

[sub_resource type="DynamicFont" id=11]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="MysteryBox" type="KinematicBody2D"]
scale = Vector2( 1.6, 1.6 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
animation = "open"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -25, -5.83333, -23.3333, -8.33333, 25.8333, -7.5, 25.8333, 14.1667, -25.8333, 15 )

[node name="boxOpen" type="Timer" parent="."]
wait_time = 0.57

[node name="guns" type="Node2D" parent="."]

[node name="RPD" parent="guns" instance=ExtResource( 2 )]
visible = false
position = Vector2( -1, -22 )
rotation = 1.5708
scale = Vector2( 1.8, 1.8 )

[node name="AK47" parent="guns" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -22 )
rotation = 1.5708
scale = Vector2( 1.75, 1.75 )

[node name="CUSTOM" parent="guns" instance=ExtResource( 5 )]
visible = false
position = Vector2( -1, -22 )
rotation = 1.5708
scale = Vector2( 1.75, 1.75 )

[node name="RAYGUN" parent="guns" instance=ExtResource( 7 )]
visible = false
position = Vector2( -2.5, -21.875 )
rotation = 1.5708

[node name="M24" parent="guns" instance=ExtResource( 8 )]
visible = false
position = Vector2( -0.625, -20.625 )
rotation = 1.5708

[node name="PUMPSHOTGUN" parent="guns" instance=ExtResource( 9 )]
visible = false
position = Vector2( -0.625, -21.25 )
rotation = 1.5708

[node name="Cost" type="Label" parent="."]
margin_left = -13.75
margin_top = 5.0
margin_right = 284.25
margin_bottom = 126.0
rect_scale = Vector2( 0.08, 0.08 )
theme = SubResource( 12 )
text = "$1500"

[node name="gunDisappear" type="Timer" parent="."]

[node name="Timer" type="Label" parent="."]
visible = false
margin_left = -2.5
margin_top = -26.875
margin_right = 295.5
margin_bottom = 94.125
rect_scale = Vector2( 0.08, 0.08 )
theme = SubResource( 12 )
text = "8"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="boxOpen" to="." method="_on_boxOpen_timeout"]
[connection signal="timeout" from="gunDisappear" to="." method="_on_gunDisappear_timeout"]
